[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "btrfs-file-history"
version = "0.2.0"
description = "Visualize file/directory history across btrfs snapshots"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
dependencies = []

[project.optional-dependencies]
graphviz = ["graphviz"]

[project.scripts]
btrfs-file-history = "btrfs_file_history.cli:main"

[tool.setuptools.packages.find]
include = ["btrfs_file_history*"]
